# automata-based-smt-solver

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  example.py  playground.py
src/automata/: automata.py  automata_algorithm.py  playground.py
src/graduation_thesis/: __init__.py
src/my_automata/: automata_algorithm.py  automata_algorithms.py  automata_builder.py  mutable_nfa.py  my_automata.py  type.py  util.py  utils.py
src/my_smt_solver/: __init__.py  automata_algorithms.py  automata_builder.py  nfa.py  presburger_arithmetic.py  presburger_arithmetic_expression.py  solver.py  type.py  utils.py
src/test/: test_algorithms.py  test_nfa_algorithms.py  test_prb_arithmetic.py  test_solver.py  test_util.py  util_test.py
