[project]
name = "graduation-thesis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tanashou", email = "tanashou0210@gmail.com" }
]
dependencies = [
    "mypy>=1.7.0",
    "automata-lib[visual]>=8.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
playground = 'rye run python src/playground.py'
m = 'rye run mypy src'

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
ignore_missing_imports = true
strict = true
