[project]
name = "graduation-thesis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tanashou", email = "tanashou0210@gmail.com" }
]
dependencies = [
    "automata-lib[visual]>=8.1.0",
    "mypy>=1.7.1",
    "pytest>=7.4.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
playground = "rye run python src/playground.py"

[tool.hatch.metadata]
allow-direct-references = true
